--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catering</title>
-    <link rel="stylesheet" href="/Catering -Website/web.css">
+    <link rel="stylesheet" href="web.css">
 </head>
 <body>
     <header>
@@ -76,4 +76,5 @@
 </body>
 
 </html>
+
 
